reduice de nmber of pictures

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <div class="wrapper">
           <img draggable="false" src="./images/12.webp" alt="" />
         </div>
-        <div class="wrapper">
+        <!-- <div class="wrapper">
           <img draggable="false" src="./images/13.webp" alt="" />
         </div>
         <div class="wrapper">
@@ -201,7 +201,7 @@
         </div>
         <div class="wrapper">
           <img draggable="false" src="./images/42.webp" alt="" />
-        </div>
+        </div> -->
       </div>
     </div>
     <div class="overlay">
